finished swagger
